--- a/views/player_statistics.pug
+++ b/views/player_statistics.pug
@@ -44,7 +44,6 @@ block content
                     th First 9 PPD
                     th Overall PPD
                     th Checkout%
-                    th Scores
             tbody
                     tr
                         td
@@ -58,14 +57,25 @@ block content
                         td
                             p= player.ppd.toFixed(2)
                         td
-                            p= (player.gamesWon * 100 / (player.checkoutAttempts === undefined ? 0 : player.checkoutAttempts)).toFixed(2) + '%'
-                        td
-                            p= player['60+'] == 0 ? "" : "60+: " + player['60+']
-                            p= player['100+'] == 0 ? "" : "100+: " + player['100+']
-                            p= player['140+'] == 0 ? "" : "140+: " + player['140+']
-                            p= player['180s'] == 0 ? "" : "180:  " + player['180s']
-
-    div(class='table-responsive')
+                            if player.gamesWon === 0
+                                p -
+                            else
+                                p= (player.gamesWon * 100 / (player.checkoutAttempts === null ? 0 : player.checkoutAttempts)).toFixed(2) + '%'
+        h3 High Scores
+        table(id='player_highscores_table' class='table table-striped table-bordered')
+            thead
+                tr
+                    th 60+
+                    th 100+
+                    th 140+
+                    th 180
+            tbody
+                    tr
+                        td: p= player['60+']
+                        td: p= player['100+']
+                        td: p= player['140+']
+                        td: p= player['180s']
+        h3 Accuracy
         table(id='player_accuracy_table' class='table table-striped table-bordered')
             thead
                 tr
@@ -79,10 +89,9 @@ block content
                         td
                             p= player.accuracy_20 === null ? 'Not Available' : player.accuracy_20.toFixed(2)
                         td
-                            p= player.accuracy_19 === null ? 'Not Available' : player.accuracy_19.toFixed(2)			
+                            p= player.accuracy_19 === null ? 'Not Available' : player.accuracy_19.toFixed(2)
 
-    div(class='table-responsive')
-        h2 Hits
+        h3 Hits
         table(id='player_scores_table' class='table table-striped table-bordered')
             thead
                 tr
@@ -111,7 +120,7 @@ block content
                             td= value
                             td= (value * 100 / scoresMap.totalThrows).toFixed(2) + '%'
 
-    h2 Heatmap
+    h3 Heatmap
     select(id='heatmap_value_selector' name='dartValues')
         option(value=0 default=true) All
         option(value=1) Singles
