--- a/views/weekly_overview.pug
+++ b/views/weekly_overview.pug
@@ -11,6 +11,9 @@ block content
             table(class='table table-striped table-bordered')
                 thead
                     tr
+                        th(colspan='10')
+                        th(colspan='3') Accuracy                
+                    tr
                         th Rank
                         th Player
                         th Played
@@ -21,19 +24,19 @@ block content
                         th 100s+
                         th 140s+
                         th 180
-                        th Accuracy
-                        th Accuracy (20s)
-                        th Accuracy (19s)
+                        th Overall
+                        th 20s
+                        th 19s
                 tbody
                     - var rank = 1
                     each stats in weekly.this_week
                         tr
                             td= rank++
-                            td= stats.player_name
+                            td(style='width: 12%')= stats.player_name
                             td= stats.games_played
                             td= stats.games_won === undefined ? 0 : stats.games_won
                             td= stats.ppd.toFixed(2)
-                            td= stats.first_nine_ppd.toFixed(2)
+                            td(style='width: 12%')= stats.first_nine_ppd.toFixed(2)
                             td= stats['60s_plus']
                             td= stats['100s_plus']
                             td= stats['140s_plus']
@@ -50,6 +53,9 @@ block content
             table(class='table table-striped table-bordered')
                 thead
                     tr
+                        th(colspan='10')
+                        th(colspan='3') Accuracy
+                    tr
                         th Rank
                         th Player
                         th Played
@@ -60,19 +66,19 @@ block content
                         th 100s+
                         th 140s+
                         th 180
-                        th Accuracy
-                        th Accuracy (20s)
-                        th Accuracy (19s)
+                        th Overall
+                        th 20s
+                        th 19s
                 tbody
                     - var rank = 1
                     each stats in weekly.last_week
                         tr
                             td= rank++
-                            td= stats.player_name
+                            td(style='width: 12%')= stats.player_name
                             td= stats.games_played
                             td= stats.games_won === undefined ? 0 : stats.games_won
                             td= stats.ppd.toFixed(2)
-                            td= stats.first_nine_ppd.toFixed(2)
+                            td(style='width: 12%')= stats.first_nine_ppd.toFixed(2)
                             td= stats['60s_plus']
                             td= stats['100s_plus']
                             td= stats['140s_plus']
