Fixed starting game for single player

--- a/views/index.pug
+++ b/views/index.pug
@@ -28,7 +28,7 @@ block content
 				p.
 					Players must be added before you can start a new game
 			else
-				form(action='/match/new' method='POST' id='newMatchForm')
+				form(action='/game/new' method='POST' id='newMatchForm')
 					legend Players 
 					div(class='form-group form-check float-left' id='sortable-player-list')
 					legend Choose players
