--- a/views/owes.pug
+++ b/views/owes.pug
@@ -9,9 +9,14 @@ block scripts
 			});
 
 			$('#registerPaybackButton').click(function() {
+				var ower = parseInt($('#ower_combo').val());
+				var owee = parseInt($('#owee_combo').val());
+				if (isNaN(ower) || isNaN(owee) === NaN) {
+					return;
+				}
 				var payload = {
-					ower: parseInt($('input[name=ower]:checked', '#paybackForm').val()),
-					owee: parseInt($('input[name=owee]:checked', '#paybackForm').val()),
+					ower: ower,
+					owee: owee,
 					amount: $('#paybackAmount').val(),
 					item: $('#paybackItem').val()
 				}
@@ -20,7 +25,7 @@ block scripts
 						location.href = window.location;
 					},
 					function(error) {
-						console.log(error);
+						console.log(error.responseText + '(' + error.status + ')');
 						var alert = $('#addPaybackFailedAlert');
 						alert.show();
 						alert.text('Unable to add payback. ' + error.responseText);
@@ -53,23 +58,6 @@ block content
 					td= owe.owe_type.item
 					td= owe.amount
 
-	//h2 Payback Log
-	//p This is an overview showing payback between players
-	//- table(class='table table-striped table-bordered')
-	//- 	thead
-	//- 		tr
-	//- 			th When
-	//- 			th Payer
-	//- 			th Payee
-	//- 			th Item
-	//- 	tbody
-	//- 		each payback in owes.paybacks
-	//- 			tr
-	//- 				td(class='col-md-3')= payback.when
-	//- 				td= payback.payer
-	//- 				td= payback.payee
-	//- 				td= payback.item
-
 	button(type='button' class='btn btn-block btn-primary' id='showPaybackModalButton' data-toggle='modal' data-target='#registerPaybackModal') Register Payback
 	div(class='modal fade' id='registerPaybackModal' tabindex='-1' role='dialog' aria-labelledby='registerPaybackModalLabel')
 		div(class='modal-dialog' role='document')
@@ -82,14 +70,16 @@ block content
 					form(id='paybackForm')
 						div(class='form-group')
 							p Ower
-							each player in players
-								input(id='ower_' + player.id type='radio' name='ower' value=player.id)
-								label(for='ower_' + player.id + '' class='radio-inline control-label')= player.name
+							select(id='ower_combo')
+								option(value='' selected disabled hidden) Choose ...
+								each player in players
+									option(value=player.id)= player.name
 						div(class='form-group')
 							p Owee
-							each player in players
-								input(id='owee_' + player.id type='radio' name='owee' value=player.id)
-								label(for='owee_' + player.id + '' class='radio-inline control-label')= player.name
+							select(id='owee_combo')
+								option(value='' selected disabled hidden) Choose ...
+								each player in players
+									option(value=player.id)= player.name
 						div(class='form-group')
 							label(for='amountInput' class='control-label') Amount
 								input(type='number' name='paybackAmount' min='0' step='1' class='form-control' value=1 id='paybackAmount')
