Added graph library and test chart

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,6 +15,7 @@ html
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js')
 		link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet')
 		script(src='/js/alertify.min.js')
+		script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.bundle.min.js')
 		link(rel='stylesheet' href='/css/alertify.min.css')
 		link(rel='stylesheet' href='/css/alertify.bootstrap.min.css')
 
