--- a/views/layout.pug
+++ b/views/layout.pug
@@ -43,5 +43,5 @@ html
 								li: a(href='/cake/owes') Owes
 								li: a(href='/statistics/weekly') Weekly Stats
 								li: a(href='/game/list') Games
-			div(class='jumbotron')
+			div(id='jumbotron' class='jumbotron')
 				block content
