--- a/views/leg_result.pug
+++ b/views/leg_result.pug
@@ -153,30 +153,27 @@ block content
         Started: #{match.created_at.toISOString()} <br>
         Finished: #{match.end_time === null ? '' : match.end_time.toISOString()} <br>
         Duration: #{((Date.parse(match.end_time)/1000 - Date.parse(match.created_at)/1000) / (60)).toFixed()} minutes <br>
-        Stakes: #{match.stake === undefined ? "None" : match.stake}
+        Stakes: #{match.stake === undefined ? "None" : match.stake} <br>
+        Rounds: #{match.round_number}
 
     if match.winner_id !== null
         table(id='match_result_table' class='table table-striped table-bordered')
             thead
                 tr
                     th Player
-                    th Darts Thrown
-                    th First 9 PPD
-                    th PPD
+                    th PPD / First 9
                     th Checkout %
                     th Scores
+                    th Accuracy
                     th Winner
             tbody
                 each player in players
                     - var statistics = player.statistics;
                     tr
                         td: p= player.name
-                        td: p= statistics.darts_thrown
-                        td: p= statistics.first_nine_ppd.toFixed(2)
-                        td: p= statistics.ppd.toFixed(2)
+                        td: p= statistics.ppd.toFixed(2) + ' / ' + statistics.first_nine_ppd.toFixed(2)
                         if player.id === match.winner_id
-                            td -
-                            //: p= statistics.checkout_percentage.toFixed(2)
+                            td: p= statistics.checkout_percentage === null ? '-' : statistics.checkout_percentage.toFixed(2)
                         else
                             td: p -
                         td
@@ -184,6 +181,7 @@ block content
                             p= statistics['100s_plus'] === 0 ? "" : "100+: " + statistics['100s_plus']
                             p= statistics['140s_plus'] === 0 ? "" : "140+: " + statistics['140s_plus']
                             p= statistics['180s'] === 0 ? "" : "180:  " + statistics['180s']
+                        td: p= statistics.overall_accuracy.toFixed(2)
                         if player.id === match.winner_id
                             td: span(class='glyphicon glyphicon-ok' aria-hidden='true')
                         else
