Default submit on confirm dialog, link from weekly stats to player, and easy switch between keyboard and normal score entry

--- a/views/leg_result.pug
+++ b/views/leg_result.pug
@@ -10,6 +10,7 @@ block scripts
                 order: [[ 2,  'desc' ]],
                 columnDefs: [ { targets: [ 1 ], visible: true } ]
             });
+            $('#continue-game').focus();
         });
     script.
         $(function () {
