--- a/views/weekly_overview.pug
+++ b/views/weekly_overview.pug
@@ -1,5 +1,24 @@
 extends layout.pug
 
+block scripts
+    script.
+        /*$(document).ready(function(){
+            $('#current_week_statistics_table').DataTable({
+                searching: false,
+                pageLength: 25,
+                bLengthChange: false,
+                bInfo : false,
+                order: [[ 4,  'desc' ]]
+            });
+            $('#last_week_statistics_table').DataTable({
+                searching: false,
+                pageLength: 25,
+                bLengthChange: false,
+                bInfo : false,
+                order: [[ 4,  'desc' ]]
+            });
+        });*/
+
 block content
     h2 Weekly Statistics
 
@@ -8,16 +27,18 @@ block content
         p No matches played yet this week...
     else
         div(class='table-responsive')
-            table(class='table table-striped table-bordered')
+            table(id='current_week_statistics_table' class='table table-striped table-bordered')
                 thead
                     tr
-                        th(colspan='10')
-                        th(colspan='3') Accuracy                
+                        th(colspan='7')
+                        th(colspan='4') Per Game
+                        th(colspan='3') Accuracy              
                     tr
                         th Rank
                         th Player
                         th Played
                         th Won
+                        th Win %                        
                         th PPD
                         th PPD (First 9)
                         th 60s+
@@ -35,12 +56,13 @@ block content
                             td(style='width: 12%'): a(href='/player/' + stats.player_id + '/stats')= stats.player_name
                             td= stats.games_played
                             td= stats.games_won === undefined ? 0 : stats.games_won
+                            td= stats.games_won === undefined ? 0 : (stats.games_won / stats.games_played * 100).toFixed(2)
                             td= stats.ppd.toFixed(2)
                             td(style='width: 12%')= stats.first_nine_ppd.toFixed(2)
-                            td= stats['60s_plus']
-                            td= stats['100s_plus']
-                            td= stats['140s_plus']
-                            td= stats['180s']
+                            td= stats['60s_plus'] == 0 ? 0 : (stats['60s_plus'] / stats.games_played).toFixed(2)
+                            td= stats['100s_plus'] == 0 ? 0 : (stats['100s_plus'] / stats.games_played).toFixed(2)
+                            td= stats['140s_plus'] == 0 ? 0 : (stats['140s_plus'] / stats.games_played).toFixed(2)
+                            td= stats['180s'] == 0 ? 0 : (stats['180s'] / stats.games_played).toFixed(2)
                             td= stats.overall_accuracy === null ? '-' : stats.overall_accuracy.toFixed(2)
                             td= stats.accuracy_20 === null ? '-' : stats.accuracy_20.toFixed(2)
                             td= stats.accuracy_19 === null ? '-' : stats.accuracy_19.toFixed(2)
@@ -50,16 +72,18 @@ block content
         p No matches were played last week
     else
         div(class='table-responsive')
-            table(class='table table-striped table-bordered')
+            table(id='last_week_statistics_table' class='table table-striped table-bordered')
                 thead
                     tr
-                        th(colspan='10')
+                        th(colspan='7')
+                        th(colspan='4') Per Game
                         th(colspan='3') Accuracy
                     tr
                         th Rank
                         th Player
                         th Played
                         th Won
+                        th Win %
                         th PPD
                         th PPD (First 9)
                         th 60s+
@@ -74,15 +98,16 @@ block content
                     each stats in weekly.last_week
                         tr
                             td= rank++
-                            td(style='width: 12%')= stats.player_name
+                            td(style='width: 12%'): a(href='/player/' + stats.player_id + '/stats')= stats.player_name
                             td= stats.games_played
                             td= stats.games_won === undefined ? 0 : stats.games_won
+                            td= stats.games_won === undefined ? 0 : (stats.games_won / stats.games_played * 100).toFixed(2)
                             td= stats.ppd.toFixed(2)
                             td(style='width: 12%')= stats.first_nine_ppd.toFixed(2)
-                            td= stats['60s_plus']
-                            td= stats['100s_plus']
-                            td= stats['140s_plus']
-                            td= stats['180s']
+                            td= stats['60s_plus'] == 0 ? 0 : (stats['60s_plus'] / stats.games_played).toFixed(2)
+                            td= stats['100s_plus'] == 0 ? 0 : (stats['100s_plus'] / stats.games_played).toFixed(2)
+                            td= stats['140s_plus'] == 0 ? 0 : (stats['140s_plus'] / stats.games_played).toFixed(2)
+                            td= stats['180s'] == 0 ? 0 : (stats['180s'] / stats.games_played).toFixed(2)
                             td= stats.overall_accuracy === null ? '-' : stats.overall_accuracy.toFixed(2)
                             td= stats.accuracy_20 === null ? '-' : stats.accuracy_20.toFixed(2)
                             td= stats.accuracy_19 === null ? '-' : stats.accuracy_19.toFixed(2)
