--- a/views/leg_result.pug
+++ b/views/leg_result.pug
@@ -177,9 +177,9 @@ block content
             button(type='button' class='btn btn-primary pull-right mt-30' id='continue-game' data-game=game.id) Continue Game
 
     p.
-        Started: #{match.created_at.toISOString()} <br>
-        Finished: #{match.end_time === null ? '' : match.end_time.toISOString()} <br>
-        Duration: #{match.end_time === null ? '-' : ((Date.parse(match.end_time)/1000 - Date.parse(match.created_at)/1000) / (60)).toFixed() + 'minutes'} <br>
+        Started: #{moment(match.created_at).format('YYYY-MM-DD HH:mm:ss')} <br>
+        Finished: #{match.end_time === null ? '' : moment(match.end_time).format('YYYY-MM-DD HH:mm:ss')} <br>
+        Duration: #{match.end_time === null ? '' : moment.duration(moment(match.end_time).diff(match.created_at)).asMinutes().toFixed() + ' minutes'} <br>
         Stakes: #{match.stake === undefined ? "None" : match.stake} <br>
         Rounds: #{match.round_number}
 
